--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.application.name=meyzieu_gym.back
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
-#https://www.baeldung.com/spring-profiles
-spring.profiles.active=@spring.profiles.active@
+# App Properties
+meyzieu-gym.app.jwtCookieName= ${JWT_COOKIE_NAME}
+meyzieu-gym.app.jwtSecret= ${JWT_SECRET}
+meyzieu-gym.app.jwtExpirationMs= 86400000
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 
 # Autoriser l'affichage des requêtes SQL faites par Hibernate
 spring.jpa.show-sql=true
@@ -11,3 +18,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 
 # Gérer Hibernate
 spring.jpa.hibernate.ddl-auto=update
+
+#https://www.baeldung.com/spring-profiles
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
