--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   pre_build:
     commands:
       - echo Pre-build started
+      - chmod +x mvnw
   build:
     commands:
       - echo Building the project...
