--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   build:
     commands:
       - echo Building the project...
-      - ./mvnw package
+      - ./mvnw package -DskipTests
   post_build:
     commands:
       - echo Build completed on `date`
