--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,14 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-# App Properties
-meyzieu-gym.app.jwtCookieName= ${JWT_COOKIE_NAME}
-meyzieu-gym.app.jwtSecret= ${JWT_SECRET}
-meyzieu-gym.app.jwtExpirationMs= 86400000
+meyzieu-gym.app.jwtCookieName=${JWT_COOKIE_NAME}
+meyzieu-gym.app.jwtSecret=${JWT_SECRET}
+meyzieu-gym.app.jwtExpirationMs=86400000
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-# Autoriser l'affichage des requêtes SQL faites par Hibernate
 spring.jpa.show-sql=true
-
-# Règle le fuseau horaire sur GMT+2
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
-
-# Gérer Hibernate
 spring.jpa.hibernate.ddl-auto=update
-
-#https://www.baeldung.com/spring-profiles
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
