--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+
+spring.mail.host=smtp.mailjet.com
+spring.mail.port=587
+spring.mail.username=22287f44d6f30c6cbc82e0d7b8938779 (API KEY)
+spring.mail.password=05fb2d5e055e3c358b052e2780fc0d16 (SECRET KEY)
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+meyzieu-gym.app.email=benjamin.richard@wildcodeschool.com
