Updated the CORS for prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 meyzieu-gym.app.email=benjamin.richard@wildcodeschool.com
+
+
+cors.allowed-origins=www.meyzieu-gym.fr
