--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,15 +14,13 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=dev
 
-# spring.mail.host=smtp.mailjet.com
-# spring.mail.port=587
-# spring.mail.username=22287f44d6f30c6cbc82e0d7b8938779
-# spring.mail.password=05fb2d5e055e3c358b052e2780fc0d16
-# spring.mail.properties.mail.smtp.auth=true
-# spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.mailjet.com
+spring.mail.port=587
+spring.mail.username=22287f44d6f30c6cbc82e0d7b8938779
+spring.mail.password=05fb2d5e055e3c358b052e2780fc0d16
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
-# # meyzieu-gym.app.email=benjamin.richard@wildcodeschool.com
-# meyzieu-gym.app.email=secretariatmeyzieugym@gmail.com
-
+meyzieu-gym.app.email=benjamin.richard@wildcodeschool.com
 
 cors.allowed-origins=www.meyzieu-gym.fr
