--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.mail.password=05fb2d5e055e3c358b052e2780fc0d16
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-meyzieu-gym.app.email=benjamin.richard@wildcodeschool.com
+meyzieu-gym.app.email=comptabilitemeyzieugym@gmail.com
 
 cors.allowed-origins=www.meyzieu-gym.fr
