--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# spring.datasource.url=${DB_URL}
+# spring.datasource.username=${DB_USER}
+# spring.datasource.password=${DB_PASSWORD}
 
-meyzieu-gym.app.jwtCookieName=${JWT_COOKIE_NAME}
-meyzieu-gym.app.jwtSecret=${JWT_SECRET}
-meyzieu-gym.app.jwtExpirationMs=86400000
+# meyzieu-gym.app.jwtCookieName=${JWT_COOKIE_NAME}
+# meyzieu-gym.app.jwtSecret=${JWT_SECRET}
+# meyzieu-gym.app.jwtExpirationMs=86400000
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
@@ -12,15 +12,15 @@ logging.level.org.springframework.web=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+spring.profiles.active=dev
 
 spring.mail.host=smtp.mailjet.com
 spring.mail.port=587
-spring.mail.username=22287f44d6f30c6cbc82e0d7b8938779
-spring.mail.password=05fb2d5e055e3c358b052e2780fc0d16
+spring.mail.username=${MJ_USER}
+spring.mail.password=${MJ_JEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-meyzieu-gym.app.email=comptabilitemeyzieugym@gmail.com
+meyzieu-gym.app.email=${MGA_EMAIL}
 
 cors.allowed-origins=www.meyzieu-gym.fr
