--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.springframework.web=DEBUG
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Paris
 spring.jpa.hibernate.ddl-auto=update
-spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+spring.profiles.active=dev
 
 spring.mail.host=smtp.mailjet.com
 spring.mail.port=587
